--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <header class="profile-section">
         <img src="YOUR_REAL_AVATAR_IMAGE_URL" alt="Your Christmas Avatar" class="profile-avatar">
-        <h1>@YourUsername</h1>
+        <h1>@StephClutch30</h1>
         <p class="greeting">Happy Holidays! Follow my links below:</p>
     </header>
 
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
