--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 Christmas Link Tree - @YourUsername 🎁</title>
+    <title>🎄 Christmas Link Tree - @StephClutch30 🎁</title>
     
     <link rel="stylesheet" href="style.css">
 
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
